// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers themeAssessment blend doesn't error with wrong personality ID 1`] = `
Object {
  "description": "You bring a natural curiosity to the world and are always interested in expanding your mind to learn new things.  You feel most at ease when experiencing the natural world, and you try to be outdoors as much as possible.  You enjoy an evening with friends, filled with good company and interesting and meaningful discussions yet are equally happy on a hiking, camping or canoeing trip.  Your friends appreciate your ideas and deep thinking.  You are happiest when spending time with others in small, comfortable groups or when working alone. You thrive when you have time to recharge in the natural world.",
  "details": Array [
    Object {
      "body": "You often find yourself working with other Naturalists as you try to work outdoors as much as possible and find your like-minded colleagues alongside you.  You also enjoy working with other Analyzers whose shared cerebral interests find you having many things in common. You appreciate your Planner colleagues as well.  They take care of managing the details so you can think through the big picture of a project and then get started on it right away.
",
      "title": "Complement",
    },
    Object {
      "body": "You are versatile because while you have your own work preferences, you work well with all types of people.  You appreciate the leadership of Visionaries and the helping hand a Mentor is always willing to provide.  However, you may find it challenging to share a workspace with your Inventor colleagues.  Their creative process can often lead to a chaotic work process and environment, which doesn't always jive with your thoughtful yet reserved approach.",
      "title": "Conflict",
    },
  ],
  "environments": Array [
    Object {
      "description": "",
      "id": "4cc07947-ea53-4a6b-bbd6-319cb400a99a",
      "name": "Encourages investigation",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "0e0b25ad-7c9d-4895-895a-6418c021fe80",
      "name": "Has a strong mission",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "879c3133-2212-4f08-87bf-7ff86ed55a07",
      "name": "Incorporates the natural environment",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "d677bd9b-99c6-4bfe-b611-d6232fb35781",
      "name": "Promotes independence",
      "personality_type": null,
    },
  ],
  "famous_people": Array [],
  "keywords": null,
  "name": "Naturalist/Analyzer",
  "personality_group": null,
  "personality_type_1": Object {
    "badge": Object {
      "color_1": "32BF4C",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/badges/c71fc8ac-13e3-4583-9efa-264fc06ee5c5_large",
      "image_medium": "https://cdn.traitify.com/badges/86a8b1fc-57ec-43af-85e9-f8b82dc7fe53_medium",
      "image_small": "https://cdn.traitify.com/badges/71c77fb8-262a-4df0-a5fa-fdf95f152268_small",
    },
    "description": "'Naturalists'...are attached to the natural world, frequently working with plants and animals in their  environment.  Often nature lovers, they like to experience the world outdoors.  They are committed to preserving and protecting the planet and its natural resources. Serene, earthy, efficient and solid, they excel at working as one with the natural environment.",
    "details": Array [],
    "environments": Array [],
    "famous_people": Array [],
    "id": "abc",
    "keywords": "sustaining, preserving, conserving, maintaining, improving, working outdoors, communing with the natural world",
    "level": null,
    "name": "Naturalist",
    "personality_traits": Array [],
  },
  "personality_type_2": Object {
    "badge": Object {
      "color_1": "37A9E9",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
      "image_medium": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
      "image_small": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
    },
    "description": "'Analyzers'...are inquisitive.  They delve, study and look deeply for information.  They have a keen eye and an experimental nature.  Analyzers use these capacities to figure out problems and search for the facts, often in a laboratory environment.  They excel at going beyond the surface toward uncovering information and discovery.",
    "details": Array [
      Object {
        "body": "https://cdn.traitify.com/widgets/career-deck/badges/color/analyzer.png",
        "title": "Paradox - Badge",
      },
    ],
    "environments": Array [],
    "famous_people": Array [],
    "id": "5f36d2be-d06f-4f11-9450-e749e5fc19d6",
    "keywords": "investigating, solving, researching, delving, examining, discovering, introversion",
    "level": null,
    "name": "Analyzer",
    "personality_traits": Array [],
  },
}
`;

exports[`Helpers themeAssessment blend doesn't require details 1`] = `
Object {
  "description": "You bring a natural curiosity to the world and are always interested in expanding your mind to learn new things.  You feel most at ease when experiencing the natural world, and you try to be outdoors as much as possible.  You enjoy an evening with friends, filled with good company and interesting and meaningful discussions yet are equally happy on a hiking, camping or canoeing trip.  Your friends appreciate your ideas and deep thinking.  You are happiest when spending time with others in small, comfortable groups or when working alone. You thrive when you have time to recharge in the natural world.",
  "details": Array [
    Object {
      "body": "https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/video.mp4",
      "title": "Paradox - Video",
    },
    Object {
      "body": "https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/captions.vtt",
      "title": "Paradox - Video - Text Track",
    },
    Object {
      "body": "https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/thumbnail.jpg",
      "title": "Paradox - Video - Thumbnail",
    },
  ],
  "environments": Array [
    Object {
      "description": "",
      "id": "4cc07947-ea53-4a6b-bbd6-319cb400a99a",
      "name": "Encourages investigation",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "0e0b25ad-7c9d-4895-895a-6418c021fe80",
      "name": "Has a strong mission",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "879c3133-2212-4f08-87bf-7ff86ed55a07",
      "name": "Incorporates the natural environment",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "d677bd9b-99c6-4bfe-b611-d6232fb35781",
      "name": "Promotes independence",
      "personality_type": null,
    },
  ],
  "famous_people": Array [],
  "keywords": null,
  "name": "Naturalist/Analyzer",
  "personality_group": null,
  "personality_type_1": Object {
    "badge": Object {
      "color_1": "38D27A",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
      "image_medium": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
      "image_small": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
    },
    "description": "'Naturalists'...are attached to the natural world, frequently working with plants and animals in their  environment.  Often nature lovers, they like to experience the world outdoors.  They are committed to preserving and protecting the planet and its natural resources. Serene, earthy, efficient and solid, they excel at working as one with the natural environment.",
    "details": Array [
      Object {
        "body": "https://cdn.traitify.com/widgets/career-deck/badges/color/naturalist.png",
        "title": "Paradox - Badge",
      },
    ],
    "environments": Array [],
    "famous_people": Array [],
    "id": "b397ab57-b128-47d6-ac2c-46f5574107b2",
    "keywords": "sustaining, preserving, conserving, maintaining, improving, working outdoors, communing with the natural world",
    "level": null,
    "name": "Naturalist",
    "personality_traits": Array [],
  },
  "personality_type_2": Object {
    "badge": Object {
      "color_1": "37A9E9",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
      "image_medium": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
      "image_small": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
    },
    "description": "'Analyzers'...are inquisitive.  They delve, study and look deeply for information.  They have a keen eye and an experimental nature.  Analyzers use these capacities to figure out problems and search for the facts, often in a laboratory environment.  They excel at going beyond the surface toward uncovering information and discovery.",
    "details": Array [
      Object {
        "body": "https://cdn.traitify.com/widgets/career-deck/badges/color/analyzer.png",
        "title": "Paradox - Badge",
      },
    ],
    "environments": Array [],
    "famous_people": Array [],
    "id": "5f36d2be-d06f-4f11-9450-e749e5fc19d6",
    "keywords": "investigating, solving, researching, delving, examining, discovering, introversion",
    "level": null,
    "name": "Analyzer",
    "personality_traits": Array [],
  },
}
`;

exports[`Helpers themeAssessment blend isn't required 1`] = `null`;

exports[`Helpers themeAssessment blend updates 1`] = `
Object {
  "description": "You bring a natural curiosity to the world and are always interested in expanding your mind to learn new things.  You feel most at ease when experiencing the natural world, and you try to be outdoors as much as possible.  You enjoy an evening with friends, filled with good company and interesting and meaningful discussions yet are equally happy on a hiking, camping or canoeing trip.  Your friends appreciate your ideas and deep thinking.  You are happiest when spending time with others in small, comfortable groups or when working alone. You thrive when you have time to recharge in the natural world.",
  "details": Array [
    Object {
      "body": "You often find yourself working with other Naturalists as you try to work outdoors as much as possible and find your like-minded colleagues alongside you.  You also enjoy working with other Analyzers whose shared cerebral interests find you having many things in common. You appreciate your Planner colleagues as well.  They take care of managing the details so you can think through the big picture of a project and then get started on it right away.
",
      "title": "Complement",
    },
    Object {
      "body": "You are versatile because while you have your own work preferences, you work well with all types of people.  You appreciate the leadership of Visionaries and the helping hand a Mentor is always willing to provide.  However, you may find it challenging to share a workspace with your Inventor colleagues.  Their creative process can often lead to a chaotic work process and environment, which doesn't always jive with your thoughtful yet reserved approach.",
      "title": "Conflict",
    },
    Object {
      "body": "https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/video.mp4",
      "title": "Paradox - Video",
    },
    Object {
      "body": "https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/captions.vtt",
      "title": "Paradox - Video - Text Track",
    },
    Object {
      "body": "https://cdn.traitify.com/widgets/career-deck/blends/naturalist_analyzer/thumbnail.jpg",
      "title": "Paradox - Video - Thumbnail",
    },
  ],
  "environments": Array [
    Object {
      "description": "",
      "id": "4cc07947-ea53-4a6b-bbd6-319cb400a99a",
      "name": "Encourages investigation",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "0e0b25ad-7c9d-4895-895a-6418c021fe80",
      "name": "Has a strong mission",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "879c3133-2212-4f08-87bf-7ff86ed55a07",
      "name": "Incorporates the natural environment",
      "personality_type": null,
    },
    Object {
      "description": "",
      "id": "d677bd9b-99c6-4bfe-b611-d6232fb35781",
      "name": "Promotes independence",
      "personality_type": null,
    },
  ],
  "famous_people": Array [],
  "keywords": null,
  "name": "Naturalist/Analyzer",
  "personality_group": null,
  "personality_type_1": Object {
    "badge": Object {
      "color_1": "38D27A",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
      "image_medium": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
      "image_small": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
    },
    "description": "'Naturalists'...are attached to the natural world, frequently working with plants and animals in their  environment.  Often nature lovers, they like to experience the world outdoors.  They are committed to preserving and protecting the planet and its natural resources. Serene, earthy, efficient and solid, they excel at working as one with the natural environment.",
    "details": Array [
      Object {
        "body": "https://cdn.traitify.com/widgets/career-deck/badges/color/naturalist.png",
        "title": "Paradox - Badge",
      },
    ],
    "environments": Array [],
    "famous_people": Array [],
    "id": "b397ab57-b128-47d6-ac2c-46f5574107b2",
    "keywords": "sustaining, preserving, conserving, maintaining, improving, working outdoors, communing with the natural world",
    "level": null,
    "name": "Naturalist",
    "personality_traits": Array [],
  },
  "personality_type_2": Object {
    "badge": Object {
      "color_1": "37A9E9",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
      "image_medium": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
      "image_small": "https://cdn.traitify.com/widgets/career-deck/badges/black/analyzer.png",
    },
    "description": "'Analyzers'...are inquisitive.  They delve, study and look deeply for information.  They have a keen eye and an experimental nature.  Analyzers use these capacities to figure out problems and search for the facts, often in a laboratory environment.  They excel at going beyond the surface toward uncovering information and discovery.",
    "details": Array [
      Object {
        "body": "https://cdn.traitify.com/widgets/career-deck/badges/color/analyzer.png",
        "title": "Paradox - Badge",
      },
    ],
    "environments": Array [],
    "famous_people": Array [],
    "id": "5f36d2be-d06f-4f11-9450-e749e5fc19d6",
    "keywords": "investigating, solving, researching, delving, examining, discovering, introversion",
    "level": null,
    "name": "Analyzer",
    "personality_traits": Array [],
  },
}
`;

exports[`Helpers themeAssessment traits updates 1`] = `
Object {
  "personality_trait": Object {
    "definition": "energized and aware of one’s surroundings",
    "description": "",
    "id": "ca5a4f59-c2bf-46b2-ac21-e9de4190022f",
    "name": "Alert",
    "personality_type": Object {
      "badge": Object {
        "color_1": "FABC50",
        "color_2": "",
        "color_3": "",
        "font_color": "",
        "image_large": "https://cdn.traitify.com/widgets/career-deck/badges/black/planner.png",
        "image_medium": "https://cdn.traitify.com/widgets/career-deck/badges/black/planner.png",
        "image_small": "https://cdn.traitify.com/widgets/career-deck/badges/black/planner.png",
      },
      "description": "'Planners'...are the detail people.  They are methodical, precise, and detail-oriented.  Planners create systems to follow, and enjoy working with data, detail, words and numbers.  Great at manipulating data, they love procedure and routine.  Often found in office settings, they excel at completing detailed work in an organized manner.",
      "details": Array [
        Object {
          "body": "https://cdn.traitify.com/widgets/career-deck/badges/color/planner.png",
          "title": "Paradox - Badge",
        },
      ],
      "environments": Array [
        Object {
          "description": "",
          "id": "66f8da0f-f1bc-4623-91de-4a38b3f89eba",
          "name": "Allows for both independent work and teamwork",
          "personality_type": null,
        },
        Object {
          "description": "",
          "id": "26d27c59-568a-4890-a362-fd3ad6f1114d",
          "name": "Allows for work to be done in an organized fashion",
          "personality_type": null,
        },
        Object {
          "description": "",
          "id": "c137ac4f-ae61-455e-9af6-a19b8194b7f6",
          "name": "Fosters autonomy",
          "personality_type": null,
        },
        Object {
          "description": "",
          "id": "44256eb2-000c-4eeb-9285-15861bdb7d2b",
          "name": "Is routine-oriented and structured",
          "personality_type": null,
        },
        Object {
          "description": "",
          "id": "e530e75a-d5e2-44c2-b206-5d6aa053ee41",
          "name": "Is systematic and highly structured",
          "personality_type": null,
        },
        Object {
          "description": "",
          "id": "107d68a7-2fe0-4593-a2b8-146971b33425",
          "name": "Offers tangible results",
          "personality_type": null,
        },
        Object {
          "description": "",
          "id": "c2f23acf-76e8-4bf3-a96e-88829e1d0b87",
          "name": "Outlines clear goals to be accomplished",
          "personality_type": null,
        },
        Object {
          "description": "",
          "id": "d6d0070f-e9d9-4f80-a9f4-d001ec0c7982",
          "name": "Requires highly-detailed work",
          "personality_type": null,
        },
      ],
      "famous_people": Array [
        Object {
          "description": "Ancient Greek scientist",
          "id": "f52b0dc3-46ec-4066-a781-838fd7f1e21c",
          "name": "Archimedes",
          "picture": "https://cdn.traitify.com/famous_people/9efc0886-8009-4fca-9cb8-e767b670bc90_archimedes",
        },
        Object {
          "description": "American architect",
          "id": "85e08ffd-c619-456f-99b5-538f3a66c5d9",
          "name": "Frank Lloyd Wright",
          "picture": "https://cdn.traitify.com/famous_people/36c7474d-d04e-4847-b9d1-2b288a556259_frank-lloyd-wright",
        },
      ],
      "id": "c47d1d99-8f08-44a7-acee-9047732aee29",
      "keywords": "planning, organizing, keeping order, perfecting, filing, working with numbers",
      "level": null,
      "name": "Planner",
      "personality_traits": Array [],
    },
  },
  "score": 100,
}
`;

exports[`Helpers themeAssessment types doesn't error with wrong personality ID 1`] = `
Object {
  "personality_type": Object {
    "badge": Object {
      "color_1": "32BF4C",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/badges/c71fc8ac-13e3-4583-9efa-264fc06ee5c5_large",
      "image_medium": "https://cdn.traitify.com/badges/86a8b1fc-57ec-43af-85e9-f8b82dc7fe53_medium",
      "image_small": "https://cdn.traitify.com/badges/71c77fb8-262a-4df0-a5fa-fdf95f152268_small",
    },
    "description": "'Naturalists'...are attached to the natural world, frequently working with plants and animals in their  environment.  Often nature lovers, they like to experience the world outdoors.  They are committed to preserving and protecting the planet and its natural resources. Serene, earthy, efficient and solid, they excel at working as one with the natural environment.",
    "details": Array [
      Object {
        "body": "You often find yourself working.",
        "title": "Complement",
      },
      Object {
        "body": "You are versatile.",
        "title": "Conflict",
      },
    ],
    "environments": Array [
      Object {
        "description": "",
        "id": "66f8da0f-f1bc-4623-91de-4a38b3f89eba",
        "name": "Allows for both independent work and teamwork",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "9be8bcde-ede6-4c2d-91c7-ce5baec62e7e",
        "name": "Allows for independent study and peer collaboration",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "0e0b25ad-7c9d-4895-895a-6418c021fe80",
        "name": "Has a strong mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "879c3133-2212-4f08-87bf-7ff86ed55a07",
        "name": "Incorporates the natural environment",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "d89b1499-ab59-4b8b-bedc-bfcc7ef96480",
        "name": "Incorporates work with like-minded colleagues",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "19f7a904-4ad3-4db8-a6e6-f943b889ae47",
        "name": "Is fueled by a strong mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "011960de-ddc8-483d-80f7-79b16baaab03",
        "name": "Nurtures collaborations with others who share the same mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "75738aab-51a4-4cec-bfd0-3784f4170ea1",
        "name": "Offers a combination of autonomy and teamwork",
        "personality_type": null,
      },
    ],
    "famous_people": Array [
      Object {
        "description": "American folk hero, often referred to as \\"King of the Wild Frontier\\"",
        "id": "212246aa-d6db-42fa-9e25-93378ad63188",
        "name": "Davey Crockett",
        "picture": "https://cdn.traitify.com/famous_people/f8483f76-a045-474c-99b0-196b8b6af375_davey-crockett",
      },
      Object {
        "description": "English primatologist and anthropologist",
        "id": "d3f5e8fa-d881-4e4e-ba07-00f3b89bd594",
        "name": "Jane Goodall",
        "picture": "https://cdn.traitify.com/famous_people/32bad2cd-2b69-45c4-be7e-2711a3a2e99d_jane-goodall",
      },
    ],
    "id": "abc",
    "keywords": "sustaining, preserving, conserving, maintaining, improving, working outdoors, communing with the natural world",
    "level": null,
    "name": "Naturalist",
    "personality_traits": Array [],
  },
  "score": 74.71152,
}
`;

exports[`Helpers themeAssessment types doesn't require details 1`] = `
Object {
  "personality_type": Object {
    "badge": Object {
      "color_1": "38D27A",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
      "image_medium": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
      "image_small": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
    },
    "description": "'Naturalists'...are attached to the natural world, frequently working with plants and animals in their  environment.  Often nature lovers, they like to experience the world outdoors.  They are committed to preserving and protecting the planet and its natural resources. Serene, earthy, efficient and solid, they excel at working as one with the natural environment.",
    "details": Array [
      Object {
        "body": "https://cdn.traitify.com/widgets/career-deck/badges/color/naturalist.png",
        "title": "Paradox - Badge",
      },
    ],
    "environments": Array [
      Object {
        "description": "",
        "id": "66f8da0f-f1bc-4623-91de-4a38b3f89eba",
        "name": "Allows for both independent work and teamwork",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "9be8bcde-ede6-4c2d-91c7-ce5baec62e7e",
        "name": "Allows for independent study and peer collaboration",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "0e0b25ad-7c9d-4895-895a-6418c021fe80",
        "name": "Has a strong mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "879c3133-2212-4f08-87bf-7ff86ed55a07",
        "name": "Incorporates the natural environment",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "d89b1499-ab59-4b8b-bedc-bfcc7ef96480",
        "name": "Incorporates work with like-minded colleagues",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "19f7a904-4ad3-4db8-a6e6-f943b889ae47",
        "name": "Is fueled by a strong mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "011960de-ddc8-483d-80f7-79b16baaab03",
        "name": "Nurtures collaborations with others who share the same mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "75738aab-51a4-4cec-bfd0-3784f4170ea1",
        "name": "Offers a combination of autonomy and teamwork",
        "personality_type": null,
      },
    ],
    "famous_people": Array [
      Object {
        "description": "American folk hero, often referred to as \\"King of the Wild Frontier\\"",
        "id": "212246aa-d6db-42fa-9e25-93378ad63188",
        "name": "Davey Crockett",
        "picture": "https://cdn.traitify.com/famous_people/f8483f76-a045-474c-99b0-196b8b6af375_davey-crockett",
      },
      Object {
        "description": "English primatologist and anthropologist",
        "id": "d3f5e8fa-d881-4e4e-ba07-00f3b89bd594",
        "name": "Jane Goodall",
        "picture": "https://cdn.traitify.com/famous_people/32bad2cd-2b69-45c4-be7e-2711a3a2e99d_jane-goodall",
      },
    ],
    "id": "b397ab57-b128-47d6-ac2c-46f5574107b2",
    "keywords": "sustaining, preserving, conserving, maintaining, improving, working outdoors, communing with the natural world",
    "level": null,
    "name": "Naturalist",
    "personality_traits": Array [],
  },
  "score": 74.71152,
}
`;

exports[`Helpers themeAssessment types isn't required 1`] = `
Object {
  "personality_type": null,
  "score": 74.71152,
}
`;

exports[`Helpers themeAssessment types updates 1`] = `
Object {
  "personality_type": Object {
    "badge": Object {
      "color_1": "38D27A",
      "color_2": "",
      "color_3": "",
      "font_color": "",
      "image_large": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
      "image_medium": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
      "image_small": "https://cdn.traitify.com/widgets/career-deck/badges/black/naturalist.png",
    },
    "description": "'Naturalists'...are attached to the natural world, frequently working with plants and animals in their  environment.  Often nature lovers, they like to experience the world outdoors.  They are committed to preserving and protecting the planet and its natural resources. Serene, earthy, efficient and solid, they excel at working as one with the natural environment.",
    "details": Array [
      Object {
        "body": "You often find yourself working.",
        "title": "Complement",
      },
      Object {
        "body": "You are versatile.",
        "title": "Conflict",
      },
      Object {
        "body": "https://cdn.traitify.com/widgets/career-deck/badges/color/naturalist.png",
        "title": "Paradox - Badge",
      },
    ],
    "environments": Array [
      Object {
        "description": "",
        "id": "66f8da0f-f1bc-4623-91de-4a38b3f89eba",
        "name": "Allows for both independent work and teamwork",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "9be8bcde-ede6-4c2d-91c7-ce5baec62e7e",
        "name": "Allows for independent study and peer collaboration",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "0e0b25ad-7c9d-4895-895a-6418c021fe80",
        "name": "Has a strong mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "879c3133-2212-4f08-87bf-7ff86ed55a07",
        "name": "Incorporates the natural environment",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "d89b1499-ab59-4b8b-bedc-bfcc7ef96480",
        "name": "Incorporates work with like-minded colleagues",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "19f7a904-4ad3-4db8-a6e6-f943b889ae47",
        "name": "Is fueled by a strong mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "011960de-ddc8-483d-80f7-79b16baaab03",
        "name": "Nurtures collaborations with others who share the same mission",
        "personality_type": null,
      },
      Object {
        "description": "",
        "id": "75738aab-51a4-4cec-bfd0-3784f4170ea1",
        "name": "Offers a combination of autonomy and teamwork",
        "personality_type": null,
      },
    ],
    "famous_people": Array [
      Object {
        "description": "American folk hero, often referred to as \\"King of the Wild Frontier\\"",
        "id": "212246aa-d6db-42fa-9e25-93378ad63188",
        "name": "Davey Crockett",
        "picture": "https://cdn.traitify.com/famous_people/f8483f76-a045-474c-99b0-196b8b6af375_davey-crockett",
      },
      Object {
        "description": "English primatologist and anthropologist",
        "id": "d3f5e8fa-d881-4e4e-ba07-00f3b89bd594",
        "name": "Jane Goodall",
        "picture": "https://cdn.traitify.com/famous_people/32bad2cd-2b69-45c4-be7e-2711a3a2e99d_jane-goodall",
      },
    ],
    "id": "b397ab57-b128-47d6-ac2c-46f5574107b2",
    "keywords": "sustaining, preserving, conserving, maintaining, improving, working outdoors, communing with the natural world",
    "level": null,
    "name": "Naturalist",
    "personality_traits": Array [],
  },
  "score": 74.71152,
}
`;
